gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-xop_target_feature.rs
//@ only-x86_64
#[target_feature(enable = "xop")]
// { dg-error ".E0658." "" { target *-*-* } .-1 }
unsafe fn foo() {}

fn main() {}

